# sparc

./: .env.example  .env.production  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/dependencies/backend/app/dependencies/: auth.py
backend/app/models/: api_key.py  chat.py
backend/app/routers/: api_keys.py  chat.py  preview.py
backend/app/services/: __init__.py  api_key.py
backend/app/services/llm/: base.py  factory.py  gemini.py
backend/app/services/preview/: __init__.py  base.py
backend/app/utils/: retry.py  streaming.py  validation.py
backend/tests/: test_chat.py  test_llm.py  test_preview.py  test_validation.py
docs/: deployment.md
frontend/: fly.toml  package.json  tailwind.config.js
frontend/src/components/: ChatContainer.tsx  CodePreview.tsx  MessageInput.tsx  MessageList.tsx  SettingsPanel.tsx
frontend/src/utils/: api.ts  formatting.ts  streaming.ts
scripts/: deploy.sh
ui/components/: chat.tsx  code-view.tsx
