[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sparc-backend"
dynamic = ["version"]
description = "SPARC CLI - SPARC Framework Command Line Interface"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["langchain", "ai", "agent", "tools", "development"]
authors = [{name = "AI Christianson", email = "ai.christianson@christianson.ai"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
google-generativeai = "^0.3.2"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[project.optional-dependencies]
dev = [
    "pytest-timeout>=2.2.0",
    "pytest>=7.0.0",
]

[project.scripts]
sparc = "sparc_cli.__main__:main"

[project.urls]
Homepage = "https://github.com/ai-christianson/sparc"
Documentation = "https://github.com/ai-christianson/sparc#readme"
Repository = "https://github.com/ai-christianson/sparc.git"
Issues = "https://github.com/ai-christianson/sparc/issues"

[tool.setuptools.dynamic]
version = {attr = "sparc_cli.version.__version__"}

[tool.hatch.version]
path = "sparc_cli/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["sparc_cli"]

[tool.hatch.build.hooks.custom]
path = "scripts/install_playwright.py"
dependencies = ["playwright"]
